<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HSS</string>
    <string name="title">Hospital Scheduling System</string>
    <string name="action_settings">Settings</string>
    <string name="login_page">Login</string>
    <string name="loginText">Please login with your NRIC and Password</string>
    <string name="reg_page">Registration</string>
    <string name="loginUser">NRIC</string>
    <string name="loginPassword">Password (Case Sensitive)</string>
    <string name="registration">Registration Page</string>
    <string name="nric">NRIC Number:</string>
    <string name="register">Register</string>
    <string name="registernow"><u>Register now</u></string>
    <string name="login">Login</string>
    <string name="reg_text">Please fill in all fields.</string>
    <string name="email_add">Email Address:</string>
    <string name="title_activity_view_appts">Upcoming Appointments</string>
    <string name="title_activity_user">Home</string>
    <string name="title_login_activity">HSS</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="token">Security Token:</string>
    <string name="createApptLabel">Create New Appointment</string>
    <string name="forgotpassword"><u>Forgot your password?</u></string>
    <string name="rememberme">Remember me</string>
    <string name="changePassword"><u>Change Password</u></string>
    <string name="changenotification"><u>Change Notification Type</u></string>
    <string name="selecttypeappt"><b><u>Select Type of Appointment</u></b></string>
    <string name="previous"><![CDATA[<< Prev]]></string>
    <string name="next"><![CDATA[Next >>]]></string>
    <string name="selectclinicdate"><b><u>Select Clinic and Date of Appointment</u></b></string>
    <string name="selectavailabletimeslot"><b><u>Select Available Appointment Time Slot</u></b></string>
    <string name="apptbookingnotice"><i>Note: You may only book an appointment up to 3 months in advance.</i></string>

    <string-array name="left_drawer">
        <item>Create New Appointment</item>
        <item>Upcoming Appointments</item>
        <item>Appointment History</item>
        <item>View Profile</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="appointmentTypes">
        <item>Preliminary Ear Check</item>
        <item>MRI Ear Check</item>
        <item>Baby Check-up</item>
        <item>General Check-up</item>
        <item>General Dental Checkup</item>
        <item>Breast Screening</item>
    </string-array>

    <string-array name="clinics">
        <item>Potong Pasir Clinic</item>
        <item>City Hall Clinic</item>
        <item>Jurong Point Clinic</item>
        <item>NTU Clinic</item>
        <item>Sengkang Clinic</item>
    </string-array>

    <string-array name="timeslot">
        <item>10:00 A.M.</item>
        <item>10:30 A.M.</item>
        <item>11:00 A.M.</item>
        <item>11:30 A.M.</item>
        <item>12:00 P.M.</item>
        <item>12:30 P.M.</item>
        <item>01:00 P.M.</item>
        <item>01:30 P.M.</item>
        <item>02:00 P.M.</item>
        <item>02:30 P.M.</item>
        <item>03:00 P.M.</item>
        <item>03:30 P.M.</item>
        <item>04:00 P.M.</item>
        <item>04:30 P.M.</item>
        <item>05:00 P.M.</item>
        <item>05:30 P.M.</item>
    </string-array>

    <string name="title_activity_view_appointment_details">ViewAppointmentDetailsActivity</string>
    <string name="register_title">Register</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_view_appointment_details">View Appointment Details</string>
    <string name="title_appointment_history">Appointment History</string>

</resources>
