<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#f03673"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="26sp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:id="@+id/loginLogo"
        android:layout_below="@+id/title"/>
    <TextView
        android:text="@string/loginText"
        android:textSize= "15sp"
        android:gravity = "center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:paddingTop="16dp"
        android:paddingBottom="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <AutoCompleteTextView
        android:id="@+id/usernameBox"
        android:layout_width="250dp"
        android:layout_height="22dp"
        android:layout_gravity="center_vertical"
        android:textSize="13sp"
        android:hint="@string/loginUser"
        android:textColorHint="#cccccc"
        android:background="#FFFFFF"
        android:inputType="textAutoComplete"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/passwordBox"
        android:layout_alignStart="@+id/passwordBox"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="250dp"
        android:layout_height="22dp"
        android:textSize="13sp"
        android:hint="@string/loginPassword"
        android:textColorHint="#cccccc"
        android:background="#FFFFFF"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/usernameBox"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20dp"
        android:layout_below="@+id/passwordBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

    <Button
        android:id = "@+id/btnReg"
        android:text = "@string/register"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="btnReg"/>

    <Button
        android:id = "@+id/btnLogin"
        android:text = "@string/login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="btnLogin"/>


    </LinearLayout>


</RelativeLayout>
