<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectclinicdate"
            android:textColor="#325b56"
            android:id="@+id/createApptTitle2"
            android:textSize="17sp"/>


            <TextView
                android:id="@+id/textView_selectClinic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Clinic:"
                android:gravity="end"
                android:textColor="#325b56"
                android:layout_gravity="center_vertical"
                android:layout_below="@+id/createApptTitle2"
                android:layout_toLeftOf="@+id/clinicSelection"
                android:layout_marginTop="35dp"
                android:textStyle="bold"/>

            <Spinner
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/clinicSelection"
                android:layout_below="@+id/createApptTitle2"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Date:"
                android:gravity="end"
                android:textColor="#325b56"
                android:id="@+id/textView_selectDate"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/textView_selectClinic"
                android:layout_alignRight="@+id/textView_selectClinic"
                android:layout_alignEnd="@+id/textView_selectClinic"
                android:textStyle="bold"/>

            <Button
                android:textColor="#325b56"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/dateSlotSelection"
                style="?android:spinnerStyle"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_below="@+id/textView_selectClinic"
                android:layout_alignLeft="@+id/clinicSelection"
                android:layout_alignStart="@+id/clinicSelection"
                android:layout_toRightOf="@+id/textView_selectDate"
                android:layout_marginTop="25dp"/>

            <Button
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="btnNext2"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="btnPrev"
                android:id="@+id/buttonPrev"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/apptbookingnotice"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_above="@+id/buttonPrev"/>


    </RelativeLayout>



</LinearLayout>