<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d3d3d3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/backarrow"
            android:onClick="btnReturn"
            android:adjustViewBounds="false"
            android:clickable="true"
            android:cropToPadding="true"
            android:paddingTop="6dp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:src="@drawable/logo2"
        android:id="@+id/logo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#325b56"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reg_text"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="#325b56"
        android:layout_marginTop="10dp"
/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#325b56"
                android:text="@string/nric"
                android:layout_weight="1"
                android:maxLines="100"
                android:gravity="end"/>

            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/reg_nric"
                android:background="#ffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#325b56"
                android:text="Enter Password:"
                android:layout_weight="1"
                android:maxLines="100"
                android:gravity="end"/>

            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/reg_password"
                android:background="#ffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#325b56"
                android:text="Re-enter Password:"
                android:layout_weight="1"
                android:maxLines="100"
                android:gravity="end"/>

            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/reg_password2"
                android:background="#ffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#325b56"
                android:text="@string/token"
                android:layout_weight="1"
                android:maxLines="100"
                android:gravity="end"/>

            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/reg_token"
                android:background="#ffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:maxLines="1"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#325b56"
                android:text="Notification Type:"
                android:layout_weight="1"
                android:maxLines="100"
                android:gravity="end"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="end"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="5dp">
                <CheckBox
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailCheckBox"
                    android:text="Email Notification"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/smsCheckBox"
                    android:text="SMS Notification"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_button"
            android:text="@string/register"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_marginTop="12dp"
            android:onClick="onSendRegData"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
